src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CD_Renewal Sales Process</fullName>
        <description>Sales Process for Renewal Opportunity Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Hibernation</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CD_Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Hibernation</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>At_Risk__c</fullName>
        <description>The flag denotes renewal opportunity at risk of loose</description>
        <inlineHelpText>The flag denotes renewal opportunity at risk of loose</inlineHelpText>
        <label>At Risk?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Line_Amount__c</fullName>
        <inlineHelpText>Total amount that can be renewed based on customers previous purchase and contract.Actual Opp amount may differ at the time of closing.If the amount is higher the difference is calculated as upgrade amount and if lower, the difference is downgrade amount.</inlineHelpText>
        <label>Base Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Term_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Original opp with which products from these opp are co-termed.</description>
        <inlineHelpText>Original sales opportunity with which products on this opportunity should be co-termed.</inlineHelpText>
        <label>Co-Term With</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>CoTermOpp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Add_on_Opportunity__c</fullName>
        <inlineHelpText>New sales opportunity for an existing customer that is independent of renewal process</inlineHelpText>
        <label>Is Add-on Opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Term_Expiration_Date__c</fullName>
        <inlineHelpText>Date by which customers right to use the products expire if the renewal opportunity is not closed won.</inlineHelpText>
        <label>Original Term Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originating_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to an Originating Opportunity for Renewal Opportunity</description>
        <inlineHelpText>Original sales opportunity that was the basis for the renewal opportunity</inlineHelpText>
        <label>Originating Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Originating Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ready_For_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this opportunity ready for creation of renewal opportunity? If so, check this box and Renewal Manager App will auto create renewal opportunity as this opportunity is won.</inlineHelpText>
        <label>Renewal Needed and Ready for It</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Period__c</fullName>
        <description>The period determines if renewal opportunities are closed in time of contract expiration. Early renewal indicates that the opportunity was closed won prior to original contract expiration date. Carryover indicated that there is lapse in renewal and the original contract has/was expired prior to closing the renewal opportunity.</description>
        <formula>IF(AND(NOT(ISNULL(Original_Term_Expiration_Date__c)),NOT(ISNULL(CloseDate)) ), 
IF( (NOT(IsWon) &amp;&amp; (Original_Term_Expiration_Date__c &lt; TODAY()) ), 
&quot;Carry Over Renewal&quot;, 
IF(YEAR( Original_Term_Expiration_Date__c ) &gt; YEAR( CloseDate) , 
&quot;Early Renewal&quot;, 
IF(YEAR( Original_Term_Expiration_Date__c) &lt; YEAR( CloseDate) , 
&quot;Carry Over Renewal&quot;, 
IF((YEAR( Original_Term_Expiration_Date__c) = YEAR( CloseDate)) &amp;&amp;(MONTH( Original_Term_Expiration_Date__c) &lt; MONTH( CloseDate)) , 
&quot;Carry Over Renewal&quot;, 
IF( (YEAR( Original_Term_Expiration_Date__c) = YEAR( CloseDate)) &amp;&amp;(MONTH( Original_Term_Expiration_Date__c) = MONTH( CloseDate)) , 
&quot;In Period Renewal&quot;, 
IF((YEAR( Original_Term_Expiration_Date__c) = YEAR( CloseDate)) &amp;&amp;(MONTH(Original_Term_Expiration_Date__c) &gt; MONTH( CloseDate)) , 
&quot;Early Renewal&quot;, NULL) 
)
)
)
)
)
,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if renewals are closed in time of contract expiration. Early renewal means opportunity was closed prior to original contract expiration date. Carryover indicates a lapse in renewal: original contract has/was expired prior to closing the renewal</inlineHelpText>
        <label>Renewal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade_Amount__c</fullName>
        <formula>Amount - Base_Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a difference between renewal opportunity amount and the base line amount.</inlineHelpText>
        <label>Upgrade/Downgrade Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade_Reason__c</fullName>
        <label>Upgrade/Downgrade Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Service upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-year contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Product Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switched to competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of business/divestiture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade__c</fullName>
        <description>Indicates that the renewal is an upgrade or downgrade from original customer purchase.</description>
        <formula>IF(AND(NOT(ISNULL(Amount)),NOT(ISNULL(Base_Line_Amount__c)) ), 
IF( Amount &gt; Base_Line_Amount__c ,
&quot;Upgrade&quot; ,
IF(Amount &lt; Base_Line_Amount__c,
&quot;Downgrade&quot;, &quot;&quot;) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that the renewal is an upgrade or downgrade from original customer purchase.</inlineHelpText>
        <label>Upgrade/Downgrade?</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>CD_Sales</fullName>
        <active>true</active>
        <businessProcess>CD_Sales Process</businessProcess>
        <description>Record Type for Sales Opportunities</description>
        <label>CD_Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>CD_Sales_Renewal</fullName>
        <active>true</active>
        <businessProcess>CD_Renewal Sales Process</businessProcess>
        <description>Record Type for Renewal Opportunity</description>
        <label>CD_Sales - Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <businessProcess>CD_Sales Process</businessProcess>
        <label>test</label>
    </recordTypes>
    <validationRules>
        <fullName>RM_Account_Or_Contact_Is_Required</fullName>
        <active>true</active>
        <description>Account or contact is required to close an opportunity with renewal manager App as it gets tied to Assets created from Opportunity Products.</description>
        <errorConditionFormula>if (AND(IsClosed, AND(ISBLANK( AccountId ), ISBLANK( Contact__c ))),true,false)</errorConditionFormula>
        <errorMessage>Account or contact is required to close an opportunity with renewal manager App as it gets tied to Assets created from Opportunity Products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RM_Contact_Should_Have_An_Account</fullName>
        <active>true</active>
        <description>Contact should have an account. If both Account and Contact are specified, then Contact should belong to the same Account.</description>
        <errorConditionFormula>IF (
	NOT(
		ISBLANK(Contact__c)
	), 
	OR(
		ISBLANK(Contact__r.AccountId),
		Contact__r.AccountId != Account.Id
	),
	false
)</errorConditionFormula>
        <errorMessage>Personal Contacts are not allowed. If specified both Account and Contact, then Contact should belong to the same Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RM_Coterm_To_Select_For_Add_On</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Is_Add_on_Opportunity__c , &apos;yes&apos;) &amp;&amp; Co_Term_With__c == NULL</errorConditionFormula>
        <errorDisplayField>Co_Term_With__c</errorDisplayField>
        <errorMessage>Select an opportunity to co-term with for this add-on opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RM_Locking_Closed_Won_Opportunities</fullName>
        <active>true</active>
        <description>Locking Closed Won opportunities from further editing.</description>
        <errorConditionFormula>PRIORVALUE( IsWon ) == TRUE &amp;&amp; PRIORVALUE( Ready_For_Renewal__c ) == TRUE &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Won opportunities from which renewals are already created can&apos;t be further edited. Please consult system administrator for your org for any desired changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RM_Make_It_Add_On_For_Coterm</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ISBLANK(Co_Term_With__c) &amp;&amp; NOT ISPICKVAL( Is_Add_on_Opportunity__c, &apos;yes&apos;)</errorConditionFormula>
        <errorDisplayField>Is_Add_on_Opportunity__c</errorDisplayField>
        <errorMessage>As co-term opp is selected here, add-on picklist value should be &apos;yes&apos;</errorMessage>
    </validationRules>
</CustomObject>